cabal-version: 2.0

name:           codd
version:        0.1.0.0
description:    Postgres database version control for teams. README at <https://github.com/mzabani/codd#readme>
homepage:       https://github.com/mzabani/codd#readme
bug-reports:    https://github.com/mzabani/codd/issues
author:         Marcelo Zabani
maintainer:     mzabani@gmail.com
copyright:      2022 Marcelo Zabani
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/mzabani/codd

library
  exposed-modules:
      Codd
      Codd.Analysis
      Codd.AppCommands
      Codd.AppCommands.AddMigration
      Codd.AppCommands.VerifySchema
      Codd.AppCommands.WriteSchema
      Codd.Environment
      Codd.Representations
      Codd.Representations.Database
      Codd.Representations.Database.Model
      Codd.Representations.Database.Pg10
      Codd.Representations.Database.Pg11
      Codd.Representations.Database.Pg12
      Codd.Representations.Database.Pg13
      Codd.Representations.Database.Pg14
      Codd.Representations.Database.SqlGen
      Codd.Representations.Disk
      Codd.Representations.Types
      Codd.Internal
      Codd.Internal.MultiQueryStatement
      Codd.Internal.Retry
      Codd.Logging
      Codd.Parsing
      Codd.Prelude
      Codd.Query
      Codd.Types
  other-modules:
      Paths_codd
  autogen-modules:
      Paths_codd
  hs-source-dirs:
      src
  default-extensions:
      BangPatterns
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      TypeFamilies
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      ViewPatterns
  ghc-options: -O2 -Wall -Wincomplete-uni-patterns -Wpartial-fields -Werror
  build-depends:
      aeson
    , attoparsec
    , base
    , bytestring
    , containers
    , filepath
    , hashable
    , haxl
    , monad-logger
    , mtl
    , network-uri
    , postgresql-libpq
    , postgresql-simple
    , resourcet
    , streaming
    , text
    , time
    , transformers
    , unliftio
    , unliftio-core
    , unordered-containers
    , vector
  default-language: Haskell2010

executable codd
  main-is: Main.hs
  other-modules:
      Paths_codd
  autogen-modules:
      Paths_codd
  hs-source-dirs:
      app
  default-extensions:
      BangPatterns
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      TypeFamilies
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      ViewPatterns
  -- Disabling the parallel GC seems to make codd perform better in some heavier workloads I've tested.
  -- This makes sense, codd is single-threaded.
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-qg -Wall -Wincomplete-uni-patterns -Wpartial-fields -Werror
  build-depends:
      base
    , codd
    , monad-logger
    , optparse-applicative
    , postgresql-simple
    , text
    , time
  default-language: Haskell2010

benchmark codd-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-qg -with-rtsopts=-T -Wall -Wpartial-fields -Werror
  default-extensions:
      BangPatterns
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      TypeFamilies
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      ViewPatterns
  build-depends:
    aeson
    , base
    , codd
    , criterion-measurement >= 0.2.0.0
    , deepseq
    , hspec
    , hspec-core
    , hspec-expectations
    , statistics
    , streaming
    , text
    , vector
  default-language: Haskell2010

test-suite codd-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      AllSpecs
      DbDependentSpecs.AnalysisSpec
      DbDependentSpecs.AppCommandsSpec
      DbDependentSpecs.ApplicationSpec
      DbDependentSpecs.SchemaVerificationSpec
      DbDependentSpecs.InvariantsSpec
      DbUtils
      EnvironmentSpec
      LiftedExpectations
      ParsingSpec
      TypesGen
      AesonValueGen
      Paths_codd
      WritingReadingRepresentationsSpec
  autogen-modules:
      Paths_codd
  hs-source-dirs:
      test
  default-extensions:
      BangPatterns
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      LambdaCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      TypeFamilies
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      ViewPatterns
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-qg -Wunused-packages
  -- Until https://github.com/input-output-hk/haskell.nix/issues/231 is resolved,
  -- do not include hspec-discover in system-build-tools. We hack around the issue
  -- in flake.nix so both cabal and nix build work.
  -- build-tools:
  --     hspec-discover
  build-depends:
      aeson
    , attoparsec
    , base
    , codd
    , containers
    , hashable
    , hspec
    , hspec-core
    , hspec-expectations
    , monad-logger
    , mtl
    , network-uri
    , postgresql-simple
    , QuickCheck
    , random
    , resourcet
    , scientific
    , semialign
    , streaming
    , text
    , time
    , unliftio
    , unordered-containers
    , vector
  default-language: Haskell2010
